fixes notifications not showing when drawer open

--- a/src/Components/ContactDrawer/ContactDrawer.css
+++ b/src/Components/ContactDrawer/ContactDrawer.css
@@ -10,7 +10,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  z-index: 200;
+  z-index: 99;
   opacity: 0;
 
   transition: opacity 0.3s;
@@ -52,7 +52,7 @@
   bottom: 0;
   width: 100%;
   max-width: 500px;
-  z-index: 9999;
+  z-index: 99;
   overflow: auto;
 
   transition: transform 0.3s;
